--- a/src/voicify-assistant-sdk/build.gradle
+++ b/src/voicify-assistant-sdk/build.gradle
@@ -29,6 +29,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    sourceSets {
+        main {
+            java {
+                srcDirs 'src/main/java', 'src/main/java/2'
+            }
+        }
+    }
 }
 
 dependencies {
