--- a/src/voicify-assistant-sdk/build.gradle
+++ b/src/voicify-assistant-sdk/build.gradle
@@ -41,6 +41,7 @@ android {
 
 dependencies {
 
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.+'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.2'
     implementation 'com.squareup.picasso:picasso:2.8'
