--- a/src/voicify-assistant-sdk/build.gradle
+++ b/src/voicify-assistant-sdk/build.gradle
@@ -40,8 +40,9 @@ android {
 }
 
 dependencies {
-
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.+'
+    implementation "io.noties.markwon:core:4.6.2"
+    implementation 'androidx.browser:browser:1.3.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.2'
     implementation 'com.squareup.picasso:picasso:2.8'
