--- a/src/voicify-assistant-sdk/build.gradle
+++ b/src/voicify-assistant-sdk/build.gradle
@@ -2,11 +2,11 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'maven-publish'
 }
 
 android {
     compileSdk 31
-
     defaultConfig {
         minSdk 21
         targetSdk 31
@@ -40,7 +40,6 @@ android {
 }
 
 dependencies {
-    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.+'
     implementation"io.noties.markwon:ext-tasklist:4.6.2"
     implementation "io.noties.markwon:core:4.6.2"
     implementation 'androidx.browser:browser:1.3.0'
@@ -48,12 +47,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.2'
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.firebase:firebase-components:17.0.0'
     implementation 'com.google.code.gson:gson:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.1.0'
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0")
-    implementation("com.google.android.material:material:1.1.0-alpha06")
+    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
+    implementation("com.google.android.material:material:1.6.1")
     implementation 'com.psoffritti.slidingpanel:core:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
