--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -6,7 +6,7 @@ dependencyResolutionManagement {
         maven {
             url 'https://jitpack.io'
         }
-        //jcenter() // Warning: this repository is going to shut down soon
+        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 rootProject.name = "VoicifyAssistantSample"
