--- a/src/jitpack.yml
+++ b/src/jitpack.yml
@@ -2,3 +2,5 @@ jdk:
   - openjdk11
 before_install:
   - ./scripts/prepareJitpackEnvironment.sh
+install:
+  - ./gradlew build :lib:publishToMavenLocal
