--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     //implementation 'com.github.voicifydevs:voicify-android-sdk:1.1.8'
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "com.android.support.test:runner:1.0.2"
+    androidTestImplementation "com.android.support.test:rules:1.0.2"
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
