--- a/src/voicify-assistant-sdk/build.gradle
+++ b/src/voicify-assistant-sdk/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.psoffritti.slidingpanel:core:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
+    implementation 'jp.wasabeef:picasso-transformations:2.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
