--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:theme="@style/Theme.VoicifyAssistantSample">
         <activity
             android:name=".MainActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.VoicifyAssistantSample.NoActionBar">
