--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -46,11 +46,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    // use the below implementation to use the local version of the sdk
     implementation project(path: ':voicify-assistant-sdk')
+    //use the below implementation and update the version number to test the sdk from jitpack
+    //implementation 'com.github.voicifydevs:voicify-android-sdk:1.1.8'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    //implementation 'com.github.voicifydevs:voicify-android-sdk:1.1.8'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation "com.android.support.test:runner:1.0.2"
     androidTestImplementation "com.android.support.test:rules:1.0.2"
